=== HEAD

* Add pg_array_associations plugin, for associations based on PostgreSQL arrays containing foreign keys (jeremyevans)

* Add Sequel.deep_qualify, for easily doing a deep qualification (jeremyevans)

* Enable use of window functions for limited eager loading by default (jeremyevans)

* Handle offsets correctly when eager loading one_to_one associations (jeremyevans)

* Raise exception for infinite and NaN floats on MySQL (jeremyevans) (#677)

* Make dataset string literalization that requires database connection use dataset's chosen server (jeremyevans)

* Make sure an offset without a limit is handled correctly when eager loading (jeremyevans)

* Allow providing ranges as subscripts for array[start:end] (jeremyevans)

* Prepare one_to_one associations in the prepared_statements_associations plugin (jeremyevans)

* Use prepared statements when the association has :conditions in the prepared_statements_associations plugin (jeremyevans)

* Fix prepared statement usage in some additional cases in the prepared_statements_associations plugin (jeremyevans)

* Hex escape blob input on MySQL (jeremyevans)

* Handle more disconnect errors when using the postgres adapter with the postgres-pr driver (jeremyevans)

* Model#setter_methods private method now accepts 1 argument instead of 2 (jeremyevans)

* Model#set_restricted and #update_restricted private methods now accept 2 arguments instead of 3 (jeremyevans)

* ungraphed on an eager_graph dataset now resets the original row_proc (jeremyevans)

* eager_graph now returns a naked dataset (jeremyevans)

* All behavior deprecated in Sequel 3.48.0 has been removed (jeremyevans)

* Make adapter/integration spec environment variables more consistent (jeremyevans)

* Sequel no longer provides default databases for adapter/integration specs (jeremyevans)

* Model#save no longer calls #_refresh internally (jeremyevans)

* Model#set_all and #update_all can now update the primary key (jeremyevans)
